[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/ui/health_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/stats-icons.png" type="Texture" id=2]
[ext_resource path="res://units/battler/battler_container.tres" type="Texture" id=3]
[ext_resource path="res://scenes/HumanAnim.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/defense_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/characters/human/human_base-attack.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/action_choice_background.png" type="Texture" id=7]
[ext_resource path="res://units/battler.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 16
atlas = ExtResource( 2 )
region = Rect2( 120, 8, 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "clicked"
length = 0.05
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("BattlerContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "current_attacker"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BattlerContainer/ActionContainer:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 45, 15 ), Vector2( 49, 15 ), Vector2( 45, 15 ), Vector2( 43, 15 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "defense_changed"
tracks/0/type = "value"
tracks/0/path = NodePath("BattlerContainer/StatContainer/DefenseContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattlerContainer/StatContainer/DefenseContainer:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 7.5, -7.5, 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("BattlerContainer/StatContainer/HealthContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattlerContainer/StatContainer/HealthContainer:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 7.5, -7.5, 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BattlerContainer/ActionContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattlerContainer/ActionContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "targeted"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BattlerContainer/Targeted:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 20 ), Vector2( 42, 20 ), Vector2( 37, 20 ), Vector2( 35, 20 ), Vector2( 37, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BattlerContainer/Targeted:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "targeted_hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BattlerContainer/Targeted:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "targeted_show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BattlerContainer/Targeted:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="Battler" type="Control"]
rect_pivot_offset = Vector2( 24, 24 )
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattlerContainer" type="NinePatchRect" parent="."]
margin_right = 48.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 24, 24 )
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Human" parent="BattlerContainer" instance=ExtResource( 4 )]
position = Vector2( 8, 8 )
texture = ExtResource( 6 )
centered = false
hframes = 4
vframes = 4

[node name="StatContainer" type="HBoxContainer" parent="BattlerContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
margin_bottom = -3.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthContainer" type="CenterContainer" parent="BattlerContainer/StatContainer"]
margin_right = 24.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 12, 7 )
size_flags_horizontal = 3

[node name="HealthIcon" type="TextureRect" parent="BattlerContainer/StatContainer/HealthContainer"]
margin_left = 5.0
margin_right = 19.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="HeathLabel" type="Label" parent="BattlerContainer/StatContainer/HealthContainer/HealthIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
text = "1"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenseContainer" type="CenterContainer" parent="BattlerContainer/StatContainer"]
margin_left = 24.0
margin_right = 48.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 12, 7 )
size_flags_horizontal = 3

[node name="DefenseIcon" type="TextureRect" parent="BattlerContainer/StatContainer/DefenseContainer"]
margin_left = 5.0
margin_right = 19.0
margin_bottom = 14.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 14, 14 )
texture = ExtResource( 5 )
stretch_mode = 5

[node name="DefenseLabel" type="Label" parent="BattlerContainer/StatContainer/DefenseContainer/DefenseIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
text = "10"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionContainer" type="NinePatchRect" parent="BattlerContainer"]
show_behind_parent = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -3.0
margin_top = -9.0
margin_right = 15.0005
margin_bottom = 9.0
rect_min_size = Vector2( 18, 18 )
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 9, 9 )
mouse_filter = 0
texture = ExtResource( 7 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionChoice" type="TextureRect" parent="BattlerContainer/ActionContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 2

[node name="Targeted" type="TextureRect" parent="BattlerContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -4.0
margin_bottom = 4.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 4, 4 )
mouse_filter = 2
texture = SubResource( 1 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Action" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/clicked = SubResource( 2 )
anims/current_attacker = SubResource( 3 )
anims/defense_changed = SubResource( 4 )
anims/grow_battler = SubResource( 5 )
anims/health_changed = SubResource( 6 )
anims/show_action_container = SubResource( 7 )
anims/targeted = SubResource( 8 )
anims/targeted_hide = SubResource( 9 )
anims/targeted_show = SubResource( 10 )

[connection signal="gui_input" from="BattlerContainer" to="." method="_on_BattlerContainer_gui_input"]
[connection signal="mouse_entered" from="BattlerContainer" to="." method="_on_BattlerContainer_mouse_entered"]
[connection signal="mouse_exited" from="BattlerContainer" to="." method="_on_BattlerContainer_mouse_exited"]

[editable path="BattlerContainer/Human"]
